<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Malry</string>
    <string name="action_settings">Settings</string>


    <string name="pref_my_manga_cards_compact">Compact Cards</string>
    <string name="pref_my_manga_cards_key">compact</string>
    <string name="pref_themes_title">Theme</string>
    <string name="pref_themes_key">theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_about_title">About</string>
    <string name="cbz_cache_size_pref_key">chapter_cache_size</string>
    <string name="cbz_cache_size_pref">App cache</string>
    <string name="clear_cache_key">clear_cache</string>

    <string name="single_lib_location_text">It\'s best to organize all your manga/comics into one directory</string>
    <string name="select_the_location_of_your_library_to_continue">Set the location of your library to continue</string>
    <string name="select_loation">Set</string>
    <string name="set_lib_loc_b4_continue">I need you to set the location of your library before we continue</string>
    <string name="image_cache_size_limit_key">image_cache_size_limit</string>
    <string name="image_cache_size_lmt">Image Cache</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="search">Search</string>
    <string name="perm_dialog_desc">I need this permission to fetch the comic/manga library on your phone\'s storage</string>
    <string name="perm_dialog_title">Storage Permission</string>
    <string name="later">Later</string>

</resources>
