<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="Chapter Caching">

        <EditTextPreference
            android:defaultValue="100"
            android:key="@string/chapter_cache_size_pref_key"
            android:layout="@layout/preference_custom"
            android:persistent="true"
            android:title="@string/chapter_cache_size_pref"
            android:inputType="numberDecimal" />

        <Preference
            android:layout="@layout/preference_custom"
            android:title="Clear Cache"
            android:key="@string/clear_cache_key"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="Manga Cards">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_my_manga_cards_key"
            android:layout="@layout/preference_custom"
            android:persistent="true"
            android:summary="For smoother scroll on longer lists."
            android:title="@string/pref_my_manga_cards_compact"
            android:enabled="false"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="Theme">

        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:defaultValue="@string/pref_theme_light"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_entries"
            android:key="@string/pref_themes_key"
            android:layout="@layout/preference_custom"
            android:summary="Choose your theme."
            android:title="@string/pref_themes_title"
            android:enabled="false"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="Info">

        <Preference
            android:key="@string/pref_about_title"
            android:layout="@layout/preference_custom"
            android:summary="About this app."
            android:title="@string/pref_about_title"
            />

    </PreferenceCategory>


</PreferenceScreen>